@@ -442,7 +442,10 @@ a.mf_swf {
     background-image: url(images/fileicons/swf.png);
 }
 
-
+a.mf_epub {
+    background-image: url(images/fileicons/epub.png);
+}
+    
 
 
 /* ------------------  Design corrections  --------------------------------- */
